--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,6 +11,6 @@
 
   <div class="actions">
     <button mat-raised-button color="primary">Login</button>
-    <a routerLink="./register">Create New Account</a>
+    <a routerLink="../register">Create New Account</a>
   </div>
 </form>
