--- a/src/app/auth/auth-container/auth-container.component.html
+++ b/src/app/auth/auth-container/auth-container.component.html
@@ -4,7 +4,10 @@
       <router-outlet></router-outlet>
     </mat-card-content>
     <mat-card-footer>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar
+        *ngIf="loader$ | async"
+        mode="indeterminate"
+      ></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
 </div>
