filter movies by category

--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,4 +1,6 @@
-<categories-selectors></categories-selectors>
+<categories-selectors
+  (onSelect)="populateMovieByCategory($event)"
+></categories-selectors>
 <div class="movies">
   <mat-card *ngFor="let movie of movies$ | async" class="example-card">
     <mat-card-header>
