--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -26,5 +26,10 @@
     <mat-card-content>
       <p class="desc">{{ movie.description }}</p>
     </mat-card-content>
+    <mat-card-actions>
+      <button mat-flat-button color="warn" (click)="deleteMovie(movie?.id!)">
+        Delete
+      </button>
+    </mat-card-actions>
   </mat-card>
 </div>
