--- a/src/app/movies/movies-list/movies-list.component.scss
+++ b/src/app/movies/movies-list/movies-list.component.scss
@@ -1,6 +1,6 @@
 .movies {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
 }
 
