--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,7 @@
 <mat-progress-bar
   *ngIf="loader$ | async"
   mode="indeterminate"
+  color="accent"
 ></mat-progress-bar>
 
 <mat-toolbar color="primary">
