--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <categories-selectors
     class="categories"
-    (onSelect)="populateMovieByCategory($event)"
+    (categoryChange)="populateMovieByCategory($event)"
   ></categories-selectors>
 
   <button mat-raised-button color="primary" routerLink="../add-movie">
