--- a/src/app/movies/categories-selectors/categories-selectors.component.html
+++ b/src/app/movies/categories-selectors/categories-selectors.component.html
@@ -1,6 +1,11 @@
 <mat-form-field appearance="outline">
   <mat-label>Categories</mat-label>
-  <mat-select #categoryId="ngModel" required [(ngModel)]="category" (selectionChange)="onChange($event)">
+  <mat-select
+    #categoryId="ngModel"
+    required
+    [(ngModel)]="category"
+    (selectionChange)="onChange($event)"
+  >
     <mat-option *ngFor="let cat of categories$ | async" [value]="cat.id">
       {{ cat?.name }}
     </mat-option>
