--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -44,12 +44,15 @@
   <!-- @TODO: use custom form control -->
   <categories-selectors [(category)]="movie.category_id"></categories-selectors>
 
-  <button
-    mat-raised-button
-    color="primary"
-    [disabled]="form.invalid"
-    (click)="submit()"
-  >
-    Save
-  </button>
+  <div class="actions">
+    <button
+      mat-raised-button
+      color="primary"
+      [disabled]="form.invalid"
+      (click)="submit()"
+    >
+      Save
+    </button>
+    <button mat-raised-button color="accent" routerLink="../">Back</button>
+  </div>
 </form>
